Fixing map styling on iOS

--- a/resources/css/style.less
+++ b/resources/css/style.less
@@ -254,11 +254,11 @@ body {
                 }
             }
 
-            &#map {
+            &#stations-visited {
                 height: 480px;
-                overflow: hidden;
                 position: relative;
-
+                overflow: hidden;
+                
                 .gradient {
                     z-index: 2;
                     width: 100%;
@@ -286,6 +286,17 @@ body {
                         position: relative;
                         color: @colorPink;
                     }
+                }
+
+                #map {
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    border-radius: 20px;
+                    -webkit-transform: translate3d(0px, 0px, 0px);
+                    -webkit-mask-image: -webkit-radial-gradient(white, black);
                 }
             }
 
